--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "api": "^6.1.1",
+    "axios": "^1.6.7",
+    "dayjs": "1.11.10",
     "next": "14.1.0",
+    "openmeteo": "^1.1.3",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.71.0"
