--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "weather-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,11 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
-    "api": "^6.1.1",
     "axios": "^1.6.7",
     "dayjs": "1.11.10",
     "next": "14.1.0",
-    "openmeteo": "^1.1.3",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.71.0"
