--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.71.0",
+    "sharp": "^0.33.2",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
