--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,20 +7,18 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-app:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [19, 20, 21]
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+    - uses: actions/checkout@v4
+    - name: Use Node.js 21
+      uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '21'
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build
+    - name: Install dependencies
+      run: npm ci
+    - name: Build app
+      run: npm run build
