--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@nextui-org/react": "^2.2.10",
     "axios": "^1.6.7",
     "dayjs": "1.11.10",
+    "framer-motion": "^11.0.15",
     "next": "14.1.0",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.71.0",
