--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.1.0",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "sass": "^1.71.0",
     "sharp": "^0.33.2",
